feat: add exception filter
