# src/app.controller.ts
@@ -14,4 +14,9 @@ export class AppController {
       process.exit(1);
     }, 3000);
   }
+
+  @Get('unexpected-500-error')
+  testUnknownError() {
+    throw new Error('Some unexpected error');
+  }
 }
